[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/fonts/m6x11.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.987821, 0.982676 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1015.0
margin_bottom = 615.0
color = Color( 0.168627, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 2 )]

[node name="MiddleField" type="ColorRect" parent="."]
margin_left = 508.0
margin_top = -100.0
margin_right = 512.0
margin_bottom = 700.0
color = Color( 0.690196, 0.662745, 0.662745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMessage" type="Label" parent="."]
margin_left = 226.0
margin_top = 500.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 1 )
text = "Press SPACE to start!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="."]
margin_left = 430.0
margin_top = 30.0
margin_right = 472.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="."]
margin_left = 552.0
margin_top = 30.0
margin_right = 594.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "0"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}
